--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
+    "node-fetch": "^2.6.7",
     "uuid": "^8.3.2",
     "ws": "^8.8.1"
   }
