Add check update flow to worker.
* Check, download, untar and run detached.

--- a/worker/package.json
+++ b/worker/package.json
@@ -26,6 +26,7 @@
     "bin": "worker.js",
     "dependencies": {
         "node-fetch": "^2.6.7",
+        "tar": "^6.1.11",
         "ws": "^8.8.1"
     }
 }
